Bug 37387 - UI: CTL text direction properties appear at the position used by separator line properties settings
Summary: UI: CTL text direction properties appear at the position used by separator li...
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.4.0 RC1
Hardware: x86 (IA32) Windows (All)
: high major
Assignee: Cédric Bosdonnat
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-19 14:18 UTC by manj_k
Modified: 2011-08-30 12:38 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot 1: insert_section.png (34.72 KB, image/png)
2011-05-19 14:20 UTC, manj_k
Details
Screenshot 2: format_columns.png (21.44 KB, image/png)
2011-05-19 14:22 UTC, manj_k
Details

Note You need to log in before you can comment on or make changes to this bug.
Description manj_k 2011-05-19 14:18:59 UTC
LibO 3.4 RC1
LibreOffice 3.4.0 
OOO340m1 (Build:11)
[on WinXP 32b]

[Tested with UI 'English (USA)' and 'German (Germany)']

Empty text document

Try:
1. Menu Insert > Section > Columns
The separator line properties are disarranged
[see attached screenshot 1: insert_section.png]

2. Type 'dt' > <F3>
3. Ctrl+A
4. Menu Format > Columns
The separator line properties are disarranged
[see attached screenshot 2: format_columns.png]

5. Try to edit the properties...
Utter confusion
Comment 1 manj_k 2011-05-19 14:20:41 UTC
Created attachment 46919 [details]
Screenshot 1: insert_section.png
Comment 2 manj_k 2011-05-19 14:22:06 UTC
Created attachment 46921 [details]
Screenshot 2: format_columns.png
Comment 3 vitriol 2011-05-19 21:48:36 UTC
I cannot see this problem on my installation under Win7. Controls in separator line properties are OK.
Comment 4 Rainer Bielefeld Retired 2011-05-19 22:41:17 UTC
[Reproducible] with "LibreOffice 3.4Beta5  – WIN7  Home Premium  (64bit)  [DEV300m103 (Build:5)]". 
It's the same in Menu 'Format > Columns'
The problem only is visible with active CTL (Complex Text Layout).

Reasons: comparing to older (OOo) versions Menus 'Format > Columns' and 'Insert > Section > Columns' have new properties "width" and "color" for separator line. They are at the former place of properties selection for "height" and "position", what moved 1 column to the right in the dialog. 

That place has always been used for 'Text direction' selector, what only is visible with CTL activated. So we have a conflict with activated CTL.

Additionally the dialog section heading "Properties", that appears when CTL has been activated, is misleading concerning separator line properties "height" and "position".

I believe we should use a complete additional line in the dialog for the 'Text direction' selector.

No problem in
CALC: 'Format Cell > Alignment'
Chart: 'Title > Alignment'
DRAW: Text box Paragraph format

For RTL languages the is really annoying.

@manj_k:
I believe we should not involve developers by inserting an assignee before the issue has been confirmed.
Comment 5 manj_k 2011-05-20 02:34:17 UTC
(In reply to comment #4)
> [...]
> @manj_k:
> I believe we should not involve developers by inserting an assignee before the
> issue has been confirmed.

@Rainer
Thanks for your advanced enlightening explanation. :)

I agree in principle.
My intention (in that case) has been to give Cédric sufficient notice, because he is the developer of this new feature, mentioned in the Release Notes 3.4.
[ http://wiki.documentfoundation.org/ReleaseNotes/3.4#Writer ]
(Maybe, it would be better to add Cédric to the CC List?)