fdo#37387, reorganized columns dialog to show text direction correctly

Signed-off-by: Andras Timar <atimar@suse.com>
Signed-off-by: Petr Mladek <pmladek@suse.cz>
Signed-off-by: Kohei Yoshida <kyoshida@novell.com>